--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(cachetest C)
 set(CMAKE_C_STANDARD 23)
 
 add_executable(cachetest src/main.c)
+
+target_compile_options(cachetest PRIVATE -O1)
